styles.css
:root {
  --text-color: #1a1c20;
  --link-color: #4a76ee;
  --background-color: #eeeff1;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

body {
  font-family: "Poppins", sans-serif;
  color: var(--text-color);
  background-color: var(--background-color);
  max-width: 1400px;
  margin: 0 auto;
}

a {
  color: var(--link-color);
  text-decoration: none;
}

/* NAVBAR */
nav {
  display: flex;
  justify-content: space-between;
  align-items: center;

  padding: 0 50px;
  height: 80px;
}

nav .left a {
  color: var(--text-color);
  font-size: 22px;
  font-weight: 600;
}

nav .right a {
  color: var(--text-color);
  margin: 0 10px;
}

nav .right a:last-child {
  color: var(--background-color);
  background-color: var(--text-color);
  padding: 5px 15px;
  border-radius: 5px;
}

nav .right a span {
  margin-left: 5px;
}

/* SECTION 1: Hero */
.hero-section {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 50px;
  margin: 50px 0;
  margin-bottom: 100px;
  gap: 40px;
}

.hero-section .text {
  flex: 5;
}

.hero-section .text h2 {
  font-size: 45px;
}

.hero-section .text .links {
  margin-top: 25px;
}

.hero-section .text .links a {
  display: inline-block;
  padding: 5px 10px;
  border: 2px solid var(--link-color);
  border-radius: 5px;
  margin-right: 10px;
  margin-bottom: 10px;
  transition: 0.1s;
}

.hero-section .text .links a:hover {
  color: var(--text-color);
  border: 2px solid var(--text-color);
}

.hero-section .headshot {
  display: flex;
  flex: 1;
  justify-content: flex-end;
}

.hero-section .headshot img {
  width: 200px;
  border-radius: 100%;
}

/* SECTION 2: Skills */
.skills-section {
  padding: 0 50px;
  margin-bottom: 100px;
}

.skills-section h2 {
  text-align: center;
  font-size: 35px;
}

.skills-section .text {
  text-align: center;
  margin-bottom: 20px;
}

.skills-section .cells {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.skills-section .cells .cell {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;

  width: 200px;
  padding: 10px 20px;
  margin: 10px;
  border: 1.5px solid #d3d3d3;
  border-radius: 5px;
}

.skills-section .cells .cell img {
  width: 30px;
  height: 30px;
  object-fit: contain;
  border-radius: 2px;
}

.skills-section .cells .cell span {
  font-size: 18px;
}

/* SECTION 3: Testimony */
.testimony-section {
  padding: 0 50px;
  margin-bottom: 100px;
}

.testimony-section h2 {
  font-size: 35px;
  margin-bottom: 30px;
}

.testimony-section .group {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 300px;
  gap: 50px;
}

.testimony-section .group .person-details {
  text-align: center;
  flex: 2;
}

.testimony-section .group .person-details img {
  width: 200px;
  aspect-ratio: 1 / 1;
  object-fit: cover;
  object-position: center top;
  border-radius: 50%;
  margin-bottom: 10px;
}

.testimony-section .group .person-details p {
  font-weight: 600;
}

.testimony-section .group .person-details p:last-child {
  font-weight: normal;
}

.testimony-section .group .text {
  flex: 8;
}

/* SECTION 4: Contact */
.contact-section {
  padding: 0 50px;
  margin-bottom: 100px;
}

.contact-section h2 {
  font-size: 35px;
}

.contact-section .group {
  display: flex;
  gap: 50px;
}

.contact-section .group .text {
  flex: 3;
  margin-top: 20px;
}

.contact-section .group form {
  flex: 3;
  display: flex;
  flex-direction: column;
}

.contact-section .group form input,
.contact-section .group form textarea {
  font-family: "Poppins", sans-serif;
  border: 2px solid var(--link-color);
  background-color: transparent;
  padding: 10px;
  margin-bottom: 15px;
  outline: none;
  resize: none;
}

.contact-section .group form button {
  font-size: 16px;
  font-family: "Poppins", sans-serif;
  color: #fff;
  background-color: var(--link-color);
  border: none;
  height: 50px;
  cursor: pointer;
  transition: 0.1s;
}

.contact-section .group form button:hover {
  filter: brightness(0.9);
}

@media (max-width: 850px) {
  /* SECTION 1: Hero */
  .hero-section .text h2 {
    font-size: 35px;
  }
}

@media (max-width: 740px) {
  /* SECTION 1: Hero */
  .hero-section {
    flex-direction: column-reverse;
  }

  .hero-section .headshot img {
    width: 300px;
  }

  /* SECTION 3: Testimony */
  .testimony-section {
    text-align: center;
  }

  .testimony-section .group {
    flex-direction: column;
  }

  /* SECTION 4: Contact */
  .contact-section .group {
    flex-direction: column;
  }
}

@media (max-width: 600px) {
  /* NAVBAR */
  nav {
    padding: 0 20px;
  }

  nav .right a {
    font-size: 22px;
  }

  nav .right a:last-child {
    color: var(--text-color);
    background-color: transparent;
    padding: 0;
  }

  nav .right a span {
    display: none;
  }

  /* SECTION 1: Hero */
  .hero-section {
    padding: 0 20px;
  }

  .hero-section .text h2 {
    font-size: 30px;
  }

  /* SECTION 2: Skills */
  .skills-section {
    padding: 0 20px;
  }

  .skills-section .cells .cell span {
    font-size: 16px;
  }

  /* SECTION 3: Testimony */
  .testimony-section {
    padding: 0 20px;
  }

  /* SECTION 4: Contact */
  .contact-section {
    padding: 0 20px;
  }
}

